--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 node_modules
 prisma/query.ts
+src/examples
+
+# Drive auth
+token.json
+credentials.json
+
 # Keep environment variables out of version control
 .env
