--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/csvtojson": "^2.0.0",
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
     "nodemon": "^3.0.1",
@@ -21,6 +22,8 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@prisma/client": "^5.4.2",
+    "csv-parse": "^5.5.2",
+    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "shopify-api-node": "^3.12.7"
