--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "ES6"
     ],
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noImplicitAny": false
   },
   "include": [
     "src/**/*"
