--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.4.2",
     "csv-parse": "^5.5.2",
     "csvtojson": "^2.0.10",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "shopify-api-node": "^3.12.7"
