apply vercel config

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "query": "npx ts-node script.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
