--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-node_modules
-prisma/query.ts
-src/examples
-
 # Drive auth
 google-service-account.json
 
 # Keep environment variables out of version control
 .env
+
+# Others
+node_modules
+prisma/query.ts
+src/ignore
+dist
