--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "target": "es2017",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
     "lib": [
       "ES6"
     ],
@@ -13,7 +12,7 @@
   },
   "include": [
     "src/**/*",
-    "src/ignore"
+    "api/*.ts"
   ],
   "exclude": [
     "node_modules"
