--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"LUW7fXYiw967iNuHLNjKIqB4","projectId":"prj_mCpgyJHJHBFQWKSZ7PPxUGl1l8xk"}
+{"projectId":"prj_mCpgyJHJHBFQWKSZ7PPxUGl1l8xk","orgId":"LUW7fXYiw967iNuHLNjKIqB4"}
