--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "test": "echo \"No tests yet...\""
   },
   "devDependencies": {
-    "@types/node": "^18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0",
     "@types/csvtojson": "^2.0.0",
     "@types/express": "^4.17.19",
+    "@types/node": "^18.x",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.0.0"
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@vercel/postgres": "^0.5.1",
     "csv-parse": "^5.5.2",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
-    "shopify-api-node": "^3.12.7",
-    "@vercel/postgres": "^0.5.1"
+    "shopify-api-node": "^3.12.7"
   },
   "main": "dist/src/functions/*.js"
 }
