--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@azure/functions": "^4.0.0",
     "@vercel/postgres": "^0.5.1",
+    "cors": "^2.8.5",
     "csv-parse": "^5.5.2",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
