--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
-    "shopify-api-node": "^3.12.7"
+    "multer": "^1.4.5-lts.1",
+    "shopify-api-node": "^3.12.7",
+    "streamifier": "^0.1.1"
   },
   "main": "dist/src/functions/*.js"
 }
