--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5",
     "shopify-api-node": "^3.12.7",
     "streamifier": "^0.1.1"
   },
