--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
+    "image-size": "^2.0.1",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.5",
     "shopify-api-node": "^3.12.7",
     "streamifier": "^0.1.1"
   },
